--- a/index.html
+++ b/index.html
@@ -7,53 +7,48 @@
     <title>Document</title>
     <script type="module" src="index.js"></script>
 </head>
-<body class="font-inter">
-    <!-- Navbar -->
-    <nav class="bg-green-500 px-4 py-1 text-white">
+<body class="font-inter h-screen">
+    <nav class="bg-green-500 px-4 py-1 text-white"> <!-- Navbar -->
         <h1 class="font-bold text-md">Decko Soundscape / Calculator</h1>
     </nav>
+    
+    <div class="flex gap-4 p-4"> <!-- Body -->
 
-    <div class="flex gap-4 p-4">
-        <aside class="flex flex-col gap-2">
-            <div class="grid gap-1">
+        <aside class="flex flex-col gap-2"> <!-- Sidebar -->
+            
+            <div class="grid gap-1"> <!-- Room Dimensions -->
                 <div class="flex justify-between">
                     <label class="uppercase text-sm text-slate-500 font-bold">Room Dimensions</label>
                     <button class="text-blue-600 hover:text-blue-700 underline rounded-md text-sm">save</button>
                 </div>
-                <div>
-                    <div class="flex gap-2 text-slate-600">
+                <div class="flex gap-2 text-slate-600">
+                    <div class="flex">
+                        <input type="text" class="bg-white border border-slate-300 px-1 text-right w-[4rem] rounded-l-md outline-1 text-md">
+                        <div class="bg-slate-300 rounded-r-md flex flex-col py-1 justify-end pl-1 pr-2">
+                            <span class="text-sm">mm</span>
+                        </div>
+                    </div>
+                    <span class="text-right">x</span>
+                    <div>
                         <div class="flex">
                             <input type="text" class="bg-white border border-slate-300 px-1 text-right w-[4rem] rounded-l-md outline-1 text-md">
                             <div class="bg-slate-300 rounded-r-md flex flex-col py-1 justify-end pl-1 pr-2">
                                 <span class="text-sm">mm</span>
                             </div>
                         </div>
-                        <span class="text-right">x</span>
-                        <div>
-                            <div class="flex">
-                                <input type="text" class="bg-white border border-slate-300 px-1 text-right w-[4rem] rounded-l-md outline-1 text-md">
-                                <div class="bg-slate-300 rounded-r-md flex flex-col py-1 justify-end pl-1 pr-2">
-                                    <span class="text-sm">mm</span>
-                                </div>
-                            </div>
-                        </div>
                     </div>
                 </div>
-                <!-- <form class="grid">
-                    <label for="grid-size">Room Size</label>
-                    <input type="number" id="grid-size" name="grid-size" value="100" min="1" class="w-full p-2 border rounded-md">
-                    <input type="number" id="grid-size" name="grid-size" value="100" min="1" class="w-full p-2 border rounded-md">
-                </form> -->
             </div>
+
+
             <!-- <div>
                 grid size: 100mm x 100mm
                 panel size: 600mm x 600mm
                 panel size 2: 600mm x 1200mm (two orientations)
             </div> -->
-            <!-- <div>
-                inventory
-            </div> -->
         </aside>
+
+        <!-- Main Room -->
         <main class="w-full grid">
             <div class="bg-slate-100 size-full"></div>
         </main>
