--- a/index.html
+++ b/index.html
@@ -70,17 +70,7 @@
     
                 <div class="grid gap-1"> <!-- Inventory -->
                     <label class="uppercase text-sm text-slate-500 font-bold">Inventory</label>
-                    <div class="grid grid-cols-2 gap-1">
-                        <!-- tooltip: "DECKO SOUNDSCAPE Acoustic Wall - OAK - Square - Price/Box of 5 Panels" -->
-                        <div class="flex flex-col justify-center" title="DECKO SOUNDSCAPE Acoustic Wall - OAK - Square - Price/Box of 5 Panels">
-                            <img src="./images/oak-square.png" alt="Item 1" class="w-full object-scale-down aspect-square bg-slate-200 hover:bg-slate-300 cursor-pointer rounded-md p-3" draggable="false">
-                            <span class="text-sm font-bold w-min mx-auto">600x600</span>
-                        </div>
-                        <div class="flex flex-col justify-center" title="DECKO SOUNDSCAPE Acoustic Wall - OAK - Long - Price/Box of 3 Panels">
-                            <img src="./images/oak-long.png" alt="Item 1" class="w-full object-scale-down aspect-square bg-slate-200 hover:bg-slate-300 cursor-pointer rounded-md p-3" draggable="false">
-                            <span class="text-sm font-bold w-min mx-auto">600x1200</span>
-                        </div>
-                        
+                    <div class="grid grid-cols-2 gap-1" id="inventory">
                     </div>
                 </div>
             </div>
