fixed 'ebony' filter type

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <label class="uppercase text-sm text-slate-500 font-bold">Material</label>
                     <div id='filter-buttons' class="grid grid-cols-2 gap-1 text-white bg-slate-100 p-2 rounded-md">
                         <button data-colour="#998269" data-filter="oak" class="border-2 rounded-md hover:text-white">Oak</button>
-                        <button data-colour="#4c4c4c" data-filter="ebondy" class="border-2 rounded-md hover:bg-[#4c4c4c] hover:text-white">Ebony</button>
+                        <button data-colour="#4c4c4c" data-filter="ebony" class="border-2 rounded-md hover:bg-[#4c4c4c] hover:text-white">Ebony</button>
                         <button data-colour="#9c9c93" data-filter="beech" class="border-2 rounded-md hover:bg-[#9c9c93] hover:text-white">Beech</button>
                         <button data-colour="#d9bb91" data-filter="maple" class="border-2 rounded-md hover:bg-[#d9bb91] hover:text-white">Maple</button>
                     </div>
