--- a/pdf.html
+++ b/pdf.html
@@ -107,6 +107,14 @@
     </div>
   </div>
 
+  <!-- overlay until populated -->
+  <div id="overlay" class="fixed top-0 left-0 w-screen h-screen flex items-center justify-center z-1000 bg-gray-100">
+    <div class="text-center">
+      <h1 class="text-4xl font-bold text-gray-800">Loading Design Details...</h1>
+      <p class="text-gray-600">If this takes longer than a few seconds, we will automatically close the inactive session.</p>
+    </div>
+  </div>
+
   <script>
     function populateTableWithJSON(tableID, tableJSON) {
       const tableBody = document.querySelector(`#${tableID} tbody`);
@@ -134,6 +142,7 @@
     // Listen for data sent from the main window
     window.addEventListener('message', (event) => {
       if (event.data) {
+        document.getElementById('overlay').remove();
         console.log(event.data)
         const imageElement = document.getElementById('designImage');
         imageElement.src = event.data.image;
@@ -158,6 +167,13 @@
     window.addEventListener('beforeunload', () => {
       window.close();
     });
+
+    setTimeout(() => {
+      // check if the overlay is still there
+      if (document.getElementById('overlay')) {
+        window.close();
+      }
+    }, 5000);
   </script>
 </body>
 </html>
