--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     </div>
 
     <!-- not available on mobile overlay (blur bg)-->
-    <div id="not-available-overlay" class="fixed inset-0 z-50 flex items-center justify-center bg-gray-500 bg-opacity-75 md:hidden p-4 backdrop-blur-sm">
+    <div id="not-available-overlay" class="fixed inset-0 z-50 flex items-center justify-center bg-gray-500 bg-opacity-75 lg:hidden p-4 backdrop-blur-sm">
         <div class="max-w-md w-full bg-white rounded-lg shadow-lg pointer-events-auto flex-col items-center p-6 text-center gap-2">
             <svg class="mb- mx-auto size-14 text-red-600 bg-slate-200 rounded-full p-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z"></path></svg>
             <p class="font-bold text-lg text-gray-900 text-center">Not available on mobile.</p>
